# residential-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  example.env  main.py  pyproject.toml
apps/api/app/: all_models.py  bootstrap.py  config.py  db.py  email.py  main.py  models.py  rate_limit.py  schemas.py
apps/api/app/modules/audit/: models.py  service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2026_07_09_2209-1276f5f12b0b_initial_baseline.py  2026_07_11_1207-a7f464c22163_users_roles_auth_sessions_login_codes_.py  2026_07_11_1637-b09a82d5ed46_buildings_units_visitor_parking_unit_.py  2026_07_11_1749-77301feda0df_parking_spots_and_vehicles.py  2026_07_11_1846-ae4a767e076f_visit_preregistrations_and_visit_log.py  2026_07_11_2223-cc3c3770dc7a_reservable_areas_and_reservations.py  2026_07_12_2035-d406fa36647e_infraction_types_and_charges.py
apps/api/tests/: conftest.py  test_bootstrap.py  test_database.py  test_health.py  utils.py
apps/api/tests/auth/: test_login_flow.py  test_rate_limit.py
apps/api/tests/billing/: conftest.py  test_charges.py  test_infractions.py  test_reservation_charges.py
apps/api/tests/reservations/: conftest.py  test_areas.py  test_reservations.py
apps/api/tests/units/: test_owners.py  test_structure.py  test_tenants.py
apps/api/tests/users/: test_users.py
apps/api/tests/vehicles/: test_parking_spots.py  test_vehicles.py
apps/api/tests/visitors/: test_gatehouse.py  test_preregistrations.py
(+84 files in other folders)
