[project]
name = "residential-api"
version = "0.1.0"
description = "Residential Platform backend API (FastAPI)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = ["error"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# Defaults plus: import sorting (I), modern syntax (UP), bug traps (B),
# simplifications (SIM), comprehension idioms (C4), ruff-specific (RUF).
extend-select = ["I", "UP", "B", "SIM", "C4", "RUF"]

[tool.pyright]
include = ["app", "tests", "migrations"]
